# falcon-correlate

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Makefile  README.md  pyproject.toml  show_path_sim.py  typos.local.toml  typos.toml
.github/workflows/: ci.yml  coverage-main.yml  mutation-testing.yml  release.yml
docs/: adr-001-three-tier-linting.md  adr-001-two-tier-linting.md  adr-002-tested-documentation-examples.md  adr-003-docstring-completeness-and-doctest-gates.md  complexity-antipatterns-and-refactoring-strategies.md  contents.md  developers-guide.md  falcon-correlation-id-middleware-design.md  local-validation-of-github-actions-with-act-and-pytest.md  quickstart.md  repository-layout.md  roadmap.md  users-guide.md
docs/execplans/: 2-1-1-header-retrieval.md  2-1-2-implement-trusted-source-checking.md  2-2-1-default-uui-dv7-generator.md  2-2-1-default-uuidv7-generator.md  2-2-2-custom-generator-injection.md  2-3-1-implement-default-uuid-validator.md  2-3-2-integrate-validation-into-request-processing.md  2-4-1-define-contextvars.md  2-4-2-contextvar-lifecycle.md  2-4-3-integrate-with-req-context.md  3-1-1-contextual-log-filter.md  3-1-2-example-logging-configuration.md  3-2-1-document-structlog-integration-pattern.md  4-1-1-httpx-wrapper-function.md  4-1-2-custom-httpx-transport.md  4-2-1-celery-task-publish-signal-handler.md  4-2-2-celery-worker-signal-handlers.md  4-2-3-celery-configuration-utilities.md  4-2-4-validate-optional-celery-integration.md  5-1-1-implement-async-middleware-methods.md  5-1-2-ensure-context-variable-compatibility-with-async.md  6-1-1-docstrings-for-public-apis.md  6-2-1-write-quickstart-guide.md
examples/quickstart/: configured_app.py  logging_setup.py  minimal_app.py
src/falcon_correlate/: __init__.py  _hello.py  _protocols.py  celery.py  httpx.py  middleware.py  middleware_asgi.py  middleware_config.py  middleware_utils.py  pure.py
src/falcon_correlate/unittests/: __init__.py  asgi_middleware_helpers.py  conftest.py  httpx_wrapper_helpers.py  optional_celery_dependency_helpers.py  test_celery_configuration.py  test_celery_publish_signal.py  test_celery_worker_signal.py  test_config_validation.py  test_context_variables.py  test_contextual_log_filter.py  test_contextvar_lifecycle.py  test_generator_invocation.py  test_httpx_transport.py  test_httpx_wrapper.py  test_httpx_wrapper_async.py  test_httpx_wrapper_exports.py  test_httpx_wrapper_headers.py  test_middleware.py  test_middleware_asgi.py  test_middleware_asgi_integration.py  test_middleware_asgi_properties.py  test_middleware_configuration.py  test_middleware_falcon_integration.py  test_middleware_header_handling.py  test_middleware_instantiation.py  test_middleware_properties.py  test_middleware_response_header.py  test_middleware_response_header_security.py  test_optional_celery_dependency.py  test_public_exports.py  test_req_context_integration.py  test_structlog_integration.py  test_trusted_sources.py  test_uuid7_generator.py  test_uuid_validator.py  test_validation_integration.py  uuid7_helpers.py
tests/: __init__.py  _quickstart_support.py  asgi_resources.py  conftest.py  structlog_helpers.py  test_interrogate_docstring_coverage.py
tests/bdd/: __init__.py  asgi_middleware.feature  celery_configuration.feature  celery_publish_signal.feature  celery_worker_signal.feature  context_variables.feature  contextual_log_filter.feature  contextvar_lifecycle.feature  httpx_propagation.feature  httpx_transport.feature  middleware.feature  middleware_validation_steps.py  quickstart.feature  req_context_integration.feature  structlog_integration.feature  test_asgi_middleware_steps.py  test_celery_configuration_steps.py  test_celery_publish_signal_steps.py  test_celery_worker_signal_steps.py  test_context_variables_steps.py  test_contextual_log_filter_steps.py  test_contextvar_lifecycle_steps.py  test_httpx_propagation_steps.py  test_httpx_transport_steps.py  test_middleware_steps.py  test_quickstart_steps.py  test_req_context_integration_steps.py  test_structlog_integration_steps.py  test_uuid_validator_steps.py  test_uuidv7_steps.py  uuid_validator.feature  uuidv7.feature
tests/docs/: test_quickstart_doc_matches_examples.py
tests/examples/: test_quickstart_examples.py
tests/examples/__snapshots__/: test_quickstart_examples.ambr
tests/property/: __init__.py  conftest.py  test_cidr_parsing.py  test_config_immutability.py  test_header_injection.py  test_middleware_asgi_properties.py  test_uuid_validator.py
tests/workflow_contracts/: __init__.py  test_mutation_testing.py  test_mutmut_config.py
tests/workflows/: __init__.py  conftest.py  test_ci_workflow.py
tests/workflows/fixtures/: pull_request.event.json  push.event.json
