[project]
name = "falcon-correlate"
version = "0.1.0"
description = "falcon-correlate package"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "ISC" }
dependencies = [
    "falcon>=4,<5",
    "uuid-utils>=0.14,<1; python_version < \"3.14\"",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-bdd",
    "pytest-asyncio",
    "pytest-xdist",
    "ruff",
    "structlog",
    "pyright",
    "ty",
    "pytest-timeout",
    "pyyaml",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "FURB",
    "B",
    "RUF",
    "LOG",
    "Q",
    "PT",
    "RSE",
    "PERF",
    "TRY",
    "D",
    "ANN",
    "C90",
    "PLR",
]
per-file-ignores = {"**/test_*.py" = ["S101"]}
# TD is disabled to allow FIXME notices without per-rule TD suppressions.
ignore = ["D203", "D213", "TD"]

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
    "typing",
    "datetime",
    "collections.abc",
    "dataclasses",
    "enum",
    "unittest.mock",
    "msgspec",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
"collections.abc" = "cabc"
datetime = "dt"
"unittest.mock" = "mock"
"msgspec.json" = "msjson"
typing = "typ"

[tool.ruff.lint.mccabe]
max-complexity = 9

[tool.ruff.lint.pylint]
max-args = 4

[tool.pytest.ini_options]
# Tests automatically killed after seconds elapsed
timeout = 30
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
